# daklak-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  daklak-ibus-wrap.sh  daklak-wrap.sh  meson.build  meson_options.txt
.github/workflows/: release.yml
build-docker/arch/: Dockerfile
build-docker/debian-trixie/: Dockerfile
build-docker/ubuntu-26.04/: Dockerfile
ci/: build_deb.sh  build_zst.sh
crates/daemon/: Cargo.toml
crates/daemon/protocols/: zwp-input-method-unstable-v2.xml
crates/daemon/src/: backend.rs  composer.rs  config.rs  control.rs  evdev_hooks.rs  evdev_preflight.rs  focused_app.rs  handler.rs  ipc.rs  logging.rs  main.rs  main_loop.rs  protocols.rs  sink.rs  tray.rs  window.rs
crates/daemon/src/quirks/: firefox.rs  ibus.rs  mod.rs
crates/daemon/src/transport/: evdev.rs  ibus.rs  mod.rs  supervisor.rs  wayland.rs
crates/daemon/src/wayland/: dispatch.rs  frame.rs  keymap.rs  mod.rs
crates/edit-strategy/: Cargo.toml
crates/edit-strategy/src/: capability.rs  forward_key.rs  lib.rs  shadow.rs  surrounding.rs  uinput_backspace.rs  uinput_device.rs  vk_only.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  telex.rs  viqr.rs  vni.rs
crates/evdev-adapter/: Cargo.toml
crates/evdev-adapter/examples/: probe_keycodes.rs
crates/evdev-adapter/src/: adapter.rs  lib.rs  output_backend.rs
crates/focus/: Cargo.toml
crates/focus/src/: lib.rs  x11.rs
crates/ibus-adapter/: Cargo.toml
crates/ibus-adapter/src/: bus.rs  engine.rs  ibus_text.rs  keyval.rs  lib.rs  sink.rs
crates/key-emitter/: Cargo.toml
crates/key-emitter/src/: emit_char_impl.rs  keymap.rs  lib.rs  uinput.rs  vk_v1.rs  vk_v2.rs
crates/key-emitter/tests/: emit_char_mock.rs
crates/keymap/: Cargo.toml
crates/keymap/src/: lib.rs  xkb.rs
crates/wayland-adapter/: Cargo.toml
crates/wayland-adapter/src/: dispatch.rs  dispatch_v1.rs  focused_app.rs  frame.rs  keymap.rs  lib.rs  sink.rs  state.rs  wayland_handle.rs  xkb.rs
crates/wayland-adapter/src/focus/: kde.rs  mod.rs  wlr.rs  x11.rs
data/ibus/: daklak-probe.xml  daklak.xml
docs/: architecture.md  backspace-tiers.md  capability-model.md  compositor-quirks.md  contributing.md  evdev-only-setup.md  evdev-setup.md  getting-started.md  key-emit-and-focus.md  overview.md  protocol-behavior.md  terminal-im-grab-issue.md  transports.md  wayland-input-method-protocols.md
patches/mutter-forward-key-source-device/: README.md  build.sh  mutter-forward-key-source-device.c
res/: 99-daklak-input.rules  99-daklak.rules  99-viet-ime.rules  config.toml.example  daklak.desktop  daklak.desktop.in
res/evdev-hooks/: gnome-set  gnome-unset  kde-set  kde-unset  sway-set  sway-unset  x11-set  x11-unset
res/ibus/: daklak.xml
res/xkb/: meson.build
scripts/: build.sh  cargo-build.sh  check-meson-launch-metadata.sh  control.in  generate-xkb-symbols.sh  install.sh  meson-ibus-postinst.sh  meson-postinst.sh  release-arch.sh  release-deb.sh  release-zst.sh  tool.sh
tools/: im_v1_probe-wrap.sh  xwayland-focused-app-check.sh
tools/probe/: Cargo.toml  README.ibus-lifecycle-probe.md  build.rs  daklak-probe.component.xml.in  ibus-lifecycle-probe.sh
tools/probe/src/: main.rs
tools/xkb-probe/: probe-eight-level.py  probe-eight-level.xkb  probe-f20-only.py  probe-four-level.py  probe-four-level.xkb  probe.py  probe.xkb
