[workspace]
resolver = "3"

members = [
    "vendors/vnkey/vnkey-engine",
    "crates/engine",
    "crates/edit-strategy",
    "crates/daemon",
    "crates/wayland-adapter",
    "tools/probe",
]

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
vnkey-engine = { path = "vendors/vnkey/vnkey-engine" }
tokio = { version = "1", features = ["full"] }
wayland-backend = "0.3"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
evdev = "0.13"
bitflags = "2"
xkbcommon = { version = "0.9", features = ["wayland"] }
wayland-scanner = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
anyhow = "1"
