[workspace]
resolver = "3"

members = [
    "vendors/vnkey/vnkey-engine",
    "crates/engine",
    "crates/edit-strategy",
    "crates/focus",
    "crates/keymap",
    "crates/key-emitter",
    "crates/daemon",
    "crates/wayland-adapter",
    "crates/evdev-adapter",
    "crates/ibus-adapter",
    "tools/probe",
]

[workspace.package]
license = "GPL-3.0-or-later"

[workspace.dependencies]
vnkey-engine = { path = "vendors/vnkey/vnkey-engine" }
viet-ime-keymap = { path = "crates/keymap" }
viet-ime-key-emitter = { path = "crates/key-emitter" }
tokio = { version = "1", features = ["full"] }
wayland-backend = "0.3"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols-misc = { version = "0.3", features = ["client"] }
wayland-protocols-plasma = { version = "0.3", features = ["client"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
evdev = "0.13"
bitflags = "2"
xkbcommon = { version = "0.9", features = ["wayland"] }
wayland-scanner = "0.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
anyhow = "1"
ksni = { version = "0.3", features = ["tokio"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
viet-ime-ibus-adapter = { path = "crates/ibus-adapter" }
