[package]
name = "viet-ime-daemon"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "viet-ime"
path = "src/main.rs"

[dependencies]
viet-ime-engine = { path = "../engine" }
viet-ime-edit-strategy = { path = "../edit-strategy" }
viet-ime-wayland-adapter = { path = "../wayland-adapter" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
