[package]
name = "viet-ime-daemon"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "daklak"
path = "src/main.rs"

[features]
default = ["wayland"]
wayland = []
kde = ["viet-ime-wayland-adapter/kde"]
ibus = ["dep:viet-ime-ibus-adapter"]

[dependencies]
viet-ime-engine = { path = "../engine" }
viet-ime-edit-strategy = { path = "../edit-strategy" }
viet-ime-focus = { path = "../focus" }
viet-ime-keymap = { workspace = true }
viet-ime-wayland-adapter = { path = "../wayland-adapter" }
viet-ime-evdev-adapter = { path = "../evdev-adapter" }
viet-ime-key-emitter = { workspace = true }
viet-ime-ibus-adapter = { workspace = true, optional = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
ksni = { workspace = true }
