[package]
name = "viet-ime-daemon"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "daklak"
path = "src/main.rs"

[features]
default = []
kde = ["viet-ime-wayland-adapter/kde"]
ibus = ["dep:viet-ime-ibus-adapter"]
evdev_grab = ["dep:viet-ime-evdev-adapter", "dep:zbus"]

[dependencies]
viet-ime-engine = { path = "../engine" }
viet-ime-edit-strategy = { path = "../edit-strategy" }
viet-ime-focus = { path = "../focus" }
viet-ime-keymap = { workspace = true }
viet-ime-wayland-adapter = { path = "../wayland-adapter" }
viet-ime-evdev-adapter = { path = "../evdev-adapter", optional = true }
viet-ime-key-emitter = { workspace = true }
viet-ime-ibus-adapter = { workspace = true, optional = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
ksni = { workspace = true }
libc = "0.2"
zbus = { version = "5.16.0", features = ["blocking"], optional = true }

[dev-dependencies]
# Enable the keymap test builders (real "us" layout) for daemon tests.
viet-ime-keymap = { workspace = true, features = ["test-util"] }
