[package]
name = "viet-ime-evdev-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
viet-ime-edit-strategy = { path = "../edit-strategy" }
viet-ime-keymap = { workspace = true }
viet-ime-key-emitter = { workspace = true }

anyhow = { workspace = true }
evdev = { workspace = true, features = ["tokio", "stream-trait"] }
futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
xkbcommon = { workspace = true }
