[package]
name = "viet-ime-focus"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
async-trait = "0.1"
tracing = "0.1"
anyhow = "1"
x11rb = { version = "0.13", default-features = false, features = ["allow-unsafe-code"], optional = true }

[features]
default = ["x11"]
x11 = ["x11rb"]
