[package]
name = "viet-ime-ibus-adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
viet-ime-edit-strategy = { path = "../edit-strategy" }

tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

zbus = { workspace = true }
zvariant = { workspace = true }
