[package]
name = "viet-ime-key-emitter"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
viet-ime-keymap = { workspace = true }
viet-ime-edit-strategy = { path = "../edit-strategy" }

wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
wayland-protocols-misc = { workspace = true }

xkbcommon = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
