[package]
name = "viet-ime-keymap"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
xkbcommon = { workspace = true }

[features]
# Exposes `XkbState` test builders (e.g. a real "us" layout) for the tests of
# downstream crates. Off in normal builds.
test-util = []
