[package]
name = "probe"
version = "0.1.0"
edition = "2021"
description = "Wayland protocol probe for viet-ime development"

[[bin]]
name = "probe"
path = "src/main.rs"

[[bin]]
name = "vk_xkb_probe"
path = "src/bin/vk_xkb_probe.rs"

[[bin]]
name = "vk_xkb_probe_eight"
path = "src/bin/vk_xkb_probe_eight.rs"

[[bin]]
name = "im_v1_probe"
path = "src/bin/im_v1_probe.rs"

[[bin]]
name = "ibus_probe"
path = "src/bin/ibus_probe.rs"

[dependencies]
wayland-backend = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { workspace = true }
wayland-protocols-wlr = { workspace = true }
wayland-scanner = "0.31"
libc = "0.2"

# ibus_probe (Phase 0): IBus engine over D-Bus.
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
tokio = { workspace = true }
anyhow = "1"
